Fixes #10576 (#13703)
FIxes #10576 by removing the extra padding that causes the card title to go out of line with action props

--- a/components/card/style/index.less
+++ b/components/card/style/index.less
@@ -66,7 +66,7 @@
 
   &-extra {
     float: right;
-    padding: @card-head-padding + 1.5px 0;
+    padding: @card-head-padding 0;
     font-size: @font-size-base;
     color: @text-color;
     font-weight: normal;
